test_suite/alan-2022-examples/failing/007370_mutation.alan
source lJf begin put "" while "A" end
